[package]
name = "advent21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rustc-hash = "1.1.0"
regex = "1"
thousands = "0.2"

[profile.release]
debug = true
#lto = "thin"
incremental = true
